<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/outline_home_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/outline_document_scanner_24"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_create_quiz"
        android:title="" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/outline_history_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/outline_person_24"
        android:title="@string/title_profile" />

</menu>